# plainNES

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Resources/: texture.vert
cmake/: FindSDL2.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
scripts/linux/: build.sh  profile.sh  run.sh  run.tests.sh
scripts/osx/: build.sh
src/: apu.cpp  apu.h  cpu.cpp  cpu.h  display.cpp  display.h  emulator.cpp  emulator.h  gamepak.cpp  gamepak.h  gui.cpp  gui.h  io.cpp  io.h  main.cpp  mapper.cpp  mapper.h  mapper0.cpp  mapper0.h  mapper1.cpp  mapper1.h  mapper3.cpp  mapper3.h  nes.cpp  nes.h  ntscpallete_pal.h  ppu.cpp  ppu.h  render.cpp  render.h  shader.cpp  shader.h  utils.cpp  utils.h
src/Mapper/: mapper.cpp  mapper.h  mapper0.cpp  mapper0.h  mapper1.cpp  mapper1.h  mapper2.cpp  mapper2.h  mapper3.cpp  mapper3.h  mapper4.cpp  mapper4.h
test/: romtests.cpp
